--- a/bridge-docker/Dockerfile.hardhat
+++ b/bridge-docker/Dockerfile.hardhat
@@ -6,4 +6,5 @@ COPY ethereum-bridge-contracts/yarn.lock /app
 RUN yarn
 
 COPY ethereum-bridge-contracts /app
+COPY ethereum-bridge-contracts/env.template /app/.env
 COPY bridge-docker/hardhat/deploy.sh /app/docker-deploy.sh
