--- a/utils/generate-bags/Cargo.toml
+++ b/utils/generate-bags/Cargo.toml
@@ -12,7 +12,7 @@ sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-
 frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 frame-election-provider-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
-pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.31" }
+pallet-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 
 chrono = { version = "0.4.19" }
 git2 = { version = "0.13.25", default-features = false }
