--- a/pallets/farming/Cargo.toml
+++ b/pallets/farming/Cargo.toml
@@ -84,3 +84,7 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "hex-literal",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
