--- a/pallets/pswap-distribution/Cargo.toml
+++ b/pallets/pswap-distribution/Cargo.toml
@@ -81,3 +81,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "hex-literal",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
