--- a/pallets/assets/Cargo.toml
+++ b/pallets/assets/Cargo.toml
@@ -62,3 +62,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
