--- a/pallets/band/Cargo.toml
+++ b/pallets/band/Cargo.toml
@@ -45,3 +45,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
