--- a/pallets/ceres-governance-platform/Cargo.toml
+++ b/pallets/ceres-governance-platform/Cargo.toml
@@ -71,3 +71,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
