--- a/pallets/ceres-launchpad/Cargo.toml
+++ b/pallets/ceres-launchpad/Cargo.toml
@@ -82,3 +82,7 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "pallet-timestamp/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
