--- a/pallets/demeter-farming-platform/Cargo.toml
+++ b/pallets/demeter-farming-platform/Cargo.toml
@@ -81,3 +81,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
