--- a/pallets/iroha-migration/Cargo.toml
+++ b/pallets/iroha-migration/Cargo.toml
@@ -77,3 +77,7 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "hex-literal",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
