--- a/pallets/oracle-proxy/Cargo.toml
+++ b/pallets/oracle-proxy/Cargo.toml
@@ -52,3 +52,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
