--- a/pallets/trading-pair/Cargo.toml
+++ b/pallets/trading-pair/Cargo.toml
@@ -64,3 +64,7 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "hex-literal",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
