--- a/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
@@ -82,3 +82,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "bridge-outbound-channel/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
