--- a/pallets/trustless-eth-bridge/eth-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/eth-app/Cargo.toml
@@ -75,3 +75,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "dispatch/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
