--- a/pallets/trustless-eth-bridge/evm-bridge-proxy/Cargo.toml
+++ b/pallets/trustless-eth-bridge/evm-bridge-proxy/Cargo.toml
@@ -65,3 +65,7 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
