--- a/pallets/trustless-eth-bridge/migration-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/migration-app/Cargo.toml
@@ -81,3 +81,7 @@ runtime-benchmarks = [
   "frame-system/runtime-benchmarks",
   "dispatch/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
