--- a/pallets/xst/Cargo.toml
+++ b/pallets/xst/Cargo.toml
@@ -82,3 +82,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime",
+]
