--- a/pallets/multicollateral-bonding-curve-pool/Cargo.toml
+++ b/pallets/multicollateral-bonding-curve-pool/Cargo.toml
@@ -37,6 +37,7 @@ pswap-distribution = { path = "../pswap-distribution", default-features = false 
 technical = { path = "../technical", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 pool-xyk = { path = "../pool-xyk", default-features = false }
+price-tools = { path = "../price-tools", default-features = false }
 pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 
 [dev-dependencies]
@@ -49,6 +50,7 @@ sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
 mock-liquidity-source = { path = "../mock-liquidity-source" }
+price-tools = { path = "../price-tools" }
 technical = { path = "../technical" }
 trading-pair = { path = "../trading-pair" }
 vested-rewards = { path = "../vested-rewards" }
