--- a/node/chain_spec/Cargo.toml
+++ b/node/chain_spec/Cargo.toml
@@ -44,3 +44,4 @@ main-net-coded = []
 test = ["common/test"]
 
 private-net = ["faucet", "framenode-runtime/private-net"]
+wip = ["framenode-runtime/wip"]
