--- a/relayer/substrate-gen/Cargo.toml
+++ b/relayer/substrate-gen/Cargo.toml
@@ -12,6 +12,7 @@ scale-info = { version = "2", default-features = false, features = ["derive"] }
 framenode-runtime = { path = "../../runtime", default-features = false, features = [
     "std",
     "private-net",
+    "wip",
 ] }
 hex = "0.4.3"
 sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
