--- a/pallets/xst/Cargo.toml
+++ b/pallets/xst/Cargo.toml
@@ -9,6 +9,7 @@ version = '1.0.1'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
+rustdoc-args = [ "--html-in-header", "misc/docs-katex-header.html" ]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
