--- a/relayer/ethereum-gen/Cargo.toml
+++ b/relayer/ethereum-gen/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ethers = { git = "https://github.com/sora-xor/ethers-rs", branch = "sora-v1.6.0" }
+ethers = "2.0.0"
 serde_json = "1.0.72"
 serde = "1.0.131"
 anyhow = "1.0.51"
