--- a/relayer/ethereum-gen/Cargo.toml
+++ b/relayer/ethereum-gen/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ethers = "2.0.0"
+ethers = { version = "1.0.2", features = [
+  "ws",
+  "rustls",
+] }
 serde_json = "1.0.72"
 serde = "1.0.131"
 anyhow = "1.0.51"
