--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -13,12 +13,12 @@ beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", bra
 bridge-common = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadot-v0.9.38", default-features = false } # 'develop' branch after PR 14
 bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "polkadot-v0.9.38" } # 'develop' branch after PR 14
 leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common", branch = "polkadot-v0.9.38" } # 'develop' branch after PR 14
-ethers = { version = "1.0.2", features = [
+ethers = { version = "2.0.0", features = [
   "ws",
   "rustls",
 ] }
 common = { path = "../common" }
-subxt = "0.27.1"
+subxt = { version = "0.25.0" }
 tokio = { version = "1.14.0", features = ["full"] }
 url = "2.2.2"
 http = "0.2.6"
@@ -70,4 +70,4 @@ eth-bridge = { path = "../pallets/eth-bridge" }
 bridge-channel-rpc = { path = "../pallets/trustless-eth-bridge/channel/rpc" }
 substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common", branch = "polkadot-v0.9.38", default-features = false } # 'develop' branch after PR 14
 rand = "0.8.5"
-mmr-lib = { package = "ckb-merkle-mountain-range", version = "0.3.2", default-features = false }
+mmr-lib = { package = "ckb-merkle-mountain-range", version = "0.5.2", default-features = false }
