--- a/relayer/parachain-gen/Cargo.toml
+++ b/relayer/parachain-gen/Cargo.toml
@@ -8,7 +8,7 @@ reqwest = { version = "0.11.2", features = ["blocking"] }
 
 [dependencies]
 common = { path = "../../common" }
-subxt = "0.27.1"
+subxt = { version = "0.25.0" }
 codec = { package = "parity-scale-codec", version = "3", features = ["derive"] }
 scale-info = { version = "2", features = ["derive"] }
 sp-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
