ready-to-test feature flag
Signed-off-by: Mikhail Tagirov <dev.mikhail.tagirov@outlook.com>

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -134,6 +134,11 @@ wip = [
     "framenode-runtime/wip",
 ]
 
+ready-to-test = [
+    "framenode-chain-spec/ready-to-test",
+    "framenode-runtime/ready-to-test",
+]
+
 runtime-benchmarks = [
     "frame-benchmarking-cli",
     "framenode-runtime/runtime-benchmarks",
