--- a/relayer/substrate-gen/Cargo.toml
+++ b/relayer/substrate-gen/Cargo.toml
@@ -13,6 +13,7 @@ framenode-runtime = { path = "../../runtime", default-features = false, features
     "std",
     "private-net",
     "wip",
+    "ready-to-test",
 ] }
 hex = "0.4.3"
 sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
