--- a/pallets/xor-fee/Cargo.toml
+++ b/pallets/xor-fee/Cargo.toml
@@ -39,13 +39,14 @@ pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets.git",
 sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false, optional = true }
 permissions = { path = "../permissions", default-features = false, optional = true }
 pool-xyk = { path = "../pool-xyk", default-features = false, optional = true }
+trading-pair = { path = "../trading-pair", default-features = false, optional = true }
 
 [dev-dependencies]
 currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies" }
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
 pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.25-lock-fix" }
 bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.25-lock-fix", package = "pallet-multisig" }
@@ -53,13 +54,13 @@ pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", branch
 frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
 
 common = { path = "../../common", features = ["test"] }
-ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
-demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
+ceres-liquidity-locker = { path = "../ceres-liquidity-locker" }
+demeter-farming-platform = { path = "../demeter-farming-platform" }
 dex-manager = { path = "../dex-manager" }
 mock-liquidity-source = { path = "../mock-liquidity-source" }
-permissions = { path = "../permissions", default-features = false }
-pswap-distribution = { path = "../pswap-distribution", default-features = false }
-pool-xyk = { path = "../pool-xyk", default-features = false }
+permissions = { path = "../permissions" }
+pswap-distribution = { path = "../pswap-distribution" }
+pool-xyk = { path = "../pool-xyk" }
 technical = { path = "../technical" }
 trading-pair = { path = "../trading-pair" }
 
@@ -90,6 +91,7 @@ std = [
     "sp-core?/std",
     "permissions?/std",
     "pool-xyk?/std",
+    "trading-pair?/std"
 ]
 
 runtime-benchmarks = [
@@ -100,4 +102,5 @@ runtime-benchmarks = [
     "sp-core",
     "permissions",
     "pool-xyk",
+    "trading-pair"
 ]
