--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -129,6 +129,16 @@ private-net = [
     "framenode-runtime/private-net",
 ]
 
+wip = [
+    "framenode-chain-spec/wip",
+    "framenode-runtime/wip",
+]
+
+ready-to-test = [
+    "framenode-chain-spec/ready-to-test",
+    "framenode-runtime/ready-to-test",
+]
+
 runtime-benchmarks = [
     "frame-benchmarking-cli",
     "framenode-runtime/runtime-benchmarks",
