Fix try-runtime build

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -147,5 +147,6 @@ runtime-benchmarks = [
 
 try-runtime = [
     "try-runtime-cli",
+    "try-runtime-cli/try-runtime",
     "framenode-runtime/try-runtime",
 ]
