--- a/pallets/hermes-governance-platform/Cargo.toml
+++ b/pallets/hermes-governance-platform/Cargo.toml
@@ -75,3 +75,7 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-support/try-runtime"
+]
