--- a/pallets/trustless-bridge/bridge-outbound-channel/Cargo.toml
+++ b/pallets/trustless-bridge/bridge-outbound-channel/Cargo.toml
@@ -31,7 +31,7 @@ permissions = { path = "../../permissions", default-features = false }
 traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 technical = { path = "../../technical", default-features = false }
 
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "polkadot-v0.9.38", default-features = false } # 'develop' branch after PR 14
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "develop", default-features = false } 
 ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
 
 [dev-dependencies]
