--- a/pallets/trustless-bridge/evm-bridge-proxy/runtime-api/Cargo.toml
+++ b/pallets/trustless-bridge/evm-bridge-proxy/runtime-api/Cargo.toml
@@ -18,7 +18,7 @@ serde = { version = "1.0.101", optional = true, features = ["derive"] }
 sp-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 sp-std = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "polkadot-v0.9.38", default-features = false } # 'develop' branch after PR 14
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "develop", default-features = false } 
 
 [features]
 default = ["std"]
