--- a/pallets/trustless-bridge/ethereum-light-client/Cargo.toml
+++ b/pallets/trustless-bridge/ethereum-light-client/Cargo.toml
@@ -27,16 +27,16 @@ sp-std = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot
 sp-io = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "develop", default-features = false } 
+bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
 
 ethash = { git = "https://github.com/sora-xor/ethash.git", branch = "sora-v1.6.0", default-features = false }
 
 common = { path = "../../../common", default-features = false }
 
 [dev-dependencies]
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "develop", features = [
+bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", features = [
     "test",
-] } 
+] }
 sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 sp-keystore = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
 hex-literal = { version = "0.3.1" }
