Crowdloan rewards improvements

--- a/pallets/vested-rewards/Cargo.toml
+++ b/pallets/vested-rewards/Cargo.toml
@@ -36,7 +36,7 @@ serde_bytes = { version = "0.11", default-features = false, features = [
     "alloc",
 ] }
 serde_json = { version = "1.0", default-features = false }
-technical = { path = "../technical", optional = true, default-features = false }
+technical = { path = "../technical", default-features = false }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
 itertools = { version = "0.10.5", default-features = false }
@@ -79,6 +79,5 @@ runtime-benchmarks = [
     "frame-benchmarking",
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
-    "technical",
 ]
 private-net = []
