--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -44,9 +44,11 @@ sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkad
 static_assertions = "1.1.0"
 hex = { version = "*", default-features = false }
 hex-literal = "0.3.1"
+env_logger = { version = "0.8.1", optional = true }
 
 [dev-dependencies]
 serde_json = "1.0.41"
+env_logger = { version = "0.8.1" }
 
 [features]
 default = ['std']
@@ -73,4 +75,4 @@ std = [
     'hex/std',
     "fixnum/std",
 ]
-test = []
+test = ["env_logger"]
