--- a/pallets/oracle-proxy/Cargo.toml
+++ b/pallets/oracle-proxy/Cargo.toml
@@ -28,6 +28,7 @@ sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polka
 hex-literal = "0.3.1"
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 band = { path = "../band", default-features = false }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 
 [features]
 default = ['std']
