--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -77,6 +77,7 @@ mock-liquidity-source = { path = "../pallets/mock-liquidity-source", default-fea
 multicollateral-bonding-curve-pool = { path = "../pallets/multicollateral-bonding-curve-pool", default-features = false }
 oracle-proxy = { path = "../pallets/oracle-proxy", default-features = false }
 oracle-proxy-runtime-api = { path = "../pallets/oracle-proxy/runtime-api", default-features = false }
+order-book = { path = "../pallets/order-book", default-features = false, optional = true }
 permissions = { path = "../pallets/permissions", default-features = false }
 pool-xyk = { path = "../pallets/pool-xyk", default-features = false }
 pool-xyk-benchmarking = { path = "../pallets/pool-xyk/benchmarking", default-features = false, optional = true }
@@ -225,6 +226,7 @@ std = [
     "multicollateral-bonding-curve-pool/std",
     "oracle-proxy/std",
     "oracle-proxy-runtime-api/std",
+    "order-book/std",
     "pallet-aura/std",
     "pallet-authorship/std",
     "pallet-babe/std",
@@ -288,6 +290,7 @@ private-net = [
 ]
 
 wip = [
+    "order-book",
     "framenode-chain-spec/wip",
 ]
 
@@ -331,6 +334,7 @@ runtime-benchmarks = [
     "multicollateral-bonding-curve-pool/runtime-benchmarks",
     "multicollateral-bonding-curve-pool/runtime-benchmarks",
     "oracle-proxy/runtime-benchmarks",
+    "order-book/runtime-benchmarks",
     "pallet-collective/runtime-benchmarks",
     "pool-xyk-benchmarking",
     "pool-xyk-benchmarking/runtime-benchmarks",
@@ -392,6 +396,7 @@ try-runtime = [
     "mock-liquidity-source/try-runtime",
     "multicollateral-bonding-curve-pool/try-runtime",
     "oracle-proxy/try-runtime",
+    "order-book/try-runtime",
     "pallet-aura/try-runtime",
     "pallet-authorship/try-runtime",
     "pallet-babe/try-runtime",
