add 'wip' feature to vscode build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "rust-analyzer.cargo.features": [
         "private-net",
         "runtime-benchmarks",
+        "wip",
         "try-runtime",
     ]
 }
