Rename asset extrinsic

--- a/pallets/assets/Cargo.toml
+++ b/pallets/assets/Cargo.toml
@@ -47,6 +47,7 @@ std = [
     "scale-info/std",
     "common/std",
     "currencies/std",
+    "frame-benchmarking/std",
     "frame-support/std",
     "frame-system/std",
     "serde",
